# Relayforge

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: admin.rs  admin_auth.rs  connectors.rs  docs.rs  hardening.rs  jobs.rs  lib.rs  main.rs  tenant_limits.rs  tenant_secrets.rs  webhooks.rs
crates/api/tests/: admin_rbac.rs  docs_openapi.rs  hardening_abuse.rs  level9_multi_tenant_connectors.rs  tenant_protection.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  metrics.rs  observability.rs  shutdown.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: admin_api_keys.rs  db.rs  jobs.rs  lib.rs  outbox.rs  stripe_event_idempotency.rs  tenant_daily_quota_usage.rs  tenant_provider_secrets.rs  webhook_inbox.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs  mq.rs
crates/worker/tests/: level5_e2e.rs
migrations/: 0001_create_webhook_inbox.sql  0002_create_jobs.sql  0003_create_outbox.sql  0004_create_tenant_provider_secrets.sql  0005_create_admin_api_keys.sql  0006_create_stripe_event_idempotency.sql  0007_create_tenant_daily_quota_usage.sql
observability/: README.md  runbook.md  slo.md
observability/alertmanager/: alertmanager.yml
observability/grafana/dashboards/: relayforge-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/otel-collector/: config.yaml
observability/prometheus/: alerts.yml  prometheus.yml
performance/k6/: webhook_ingest.js
scripts/perf/: run_hot_path_bench.sh  run_ingest_perf.sh
