[workspace]
members = [
  "crates/common",
  "crates/domain",
  "crates/infra",
  "crates/api",
  "crates/worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
bytes = "1.6.0"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
subtle = "2.6.1"
# Async
tokio = { version = "1.37", features = ["full"] }

# Web
axum = { version = "0.7.5", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "request-id", "limit", "catch-panic"] }

# Serialization
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# Config / Env
config = "0.14.0"
dotenvy = "0.15.7"

# Errors
anyhow = "1.0.86"
thiserror = "1.0.61"

# Logging / Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.25.0"
opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17.0", features = ["grpc-tonic", "trace"] }

# Utils
uuid = { version = "1.8.0", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["formatting"] }

# DB
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-rustls", 
  "postgres", 
  "uuid", 
  "macros", 
  "migrate", 
  "chrono",
  "json",
  ] }
chrono = { version = "0.4.38", features = ["serde"] }

futures-util = "0.3"
lapin = "3.0.0"
async-rs = "0.8"
hostname = "0.4"
once_cell = "1.20.2"
prometheus = "0.13.4"
