[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
dotenvy.workspace = true

bytes.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
subtle.workspace = true
uuid.workspace = true
chrono.workspace = true

common = { path = "../common" }
infra = { path = "../infra" }
domain = { path = "../domain" }

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
sqlx.workspace = true
testcontainers = "0.15.0"
