[package]
name = "infra"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true


common = { path = "../common" }

