[package]
name = "worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = "0.3"
dotenvy.workspace = true
sqlx.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
axum.workspace = true

# RabbitMQ
lapin = "3.0.0"
# async-rs = "0.8"

# optional ولی خیلی کاربردی برای publisher_id
hostname = "0.4"

common = { path = "../common" }
infra = { path = "../infra" }
domain = { path = "../domain" }

[dev-dependencies]
api = { path = "../api" }
hmac.workspace = true
hex.workspace = true
reqwest = { version = "0.12.9", features = ["json"] }
sha2.workspace = true
sqlx.workspace = true
testcontainers = "0.15.0"
tokio.workspace = true
uuid.workspace = true
